--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,11 +7,14 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+browser.autorefresh.Chromium.INTEGRATED=true
+browser.highlightselection.Chromium.INTEGRATED=true
 browser.run=true
-file.reference.sisane-client-public_html=public_html
-file.reference.sisane-public_html=public_html
-file.reference.sisane-test=test
+file.reference.andamio-public_html=public_html
+file.reference.andamio-client-public_html=public_html
+file.reference.andamio-public_html=public_html
+file.reference.andamio-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.sisane-client-public_html}
+site.root.folder=${file.reference.andamio-public_html}
 start.file=index.html
-web.context.root=/sisane
+web.context.root=/andamio
